--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RC Login Page</title>
     
-    <link rel="stylesheet" href="..\static\css\loginPage.css">
+    <link rel="stylesheet" href="{%  static 'css/loginPage.css' %}">
     <link rel="stylesheet" href="https://pin.it/4Gg9K8u">
 
 <!-- fontawsome -->
