--- a/clash/static/css/coding.css
+++ b/clash/static/css/coding.css
@@ -33,6 +33,7 @@
     flex-direction: column;
     /* align-items: center; */
     /* justify-content: center; */
+    /* height: calc(100vh - 112px); */
     margin-left: 10px;
     margin-right: 25px;
     /* margin-bottom: 50px; */
@@ -202,10 +203,11 @@
 }
 .codeeditdiv{
     flex: 100%;
-    height: calc(100px);
+    /* height: calc(100px); */
     border: 1px solid #EAE1E1;
     border-radius: 5px;
-    /* max-height: calc(100% - 100px); */
+    min-height: calc(100vh - 248px);
+    /* min-height: 50vh; */
     max-width: 100%;
     flex-direction: column;
 }
@@ -216,7 +218,7 @@
 
 #editor{
     width: 100%;
-     height: 100%;
+    min-height: calc(100vh - 248px);
 }
 .rcontd{
     /* height: 50px; */
@@ -339,11 +341,15 @@
     }
 
     .codeeditdiv{
-        height: 5000px;
+        height: 500px;
         max-width: 100%;
-        min-height: 350px;
+        /* min-height: 350px; */
     }
 
+    #editor{
+        width: 100%;
+        min-height: 498px;
+    }
     .footerr{
         position: relative;
     }
