--- a/clash/templates/trial1.html
+++ b/clash/templates/trial1.html
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="button" class="btn btn-danger">Logout</button>
+                                        <a href="{%url 'logout'%}"  class="btn btn-danger">Logout</a>
                                     </div>
                                 </div>
                                 </div>
