--- a/clash/templates/trial1.html
+++ b/clash/templates/trial1.html
@@ -32,7 +32,13 @@
         <div class="container-fluid">
             <a class="navbar-brand navvi" href="#" style="padding: 0px;"><img src="{% static 'img/clashwhite.png' %}" alt="Clash Logo"
                     height="30px"></a>
-            <a class="navbar-brand navvi timer" href="#" style="margin-left: 20px;">TIMER </a>
+            <div class="navbar-brand navvi timer" href="#" if="timer" style="margin-left: 20px;">
+            <div
+                class="ml-6"
+                id="timer"
+                style="color: #ffffff; width: 15vh">
+            </div>                
+            </div>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -145,7 +151,32 @@
                     </div>
                     <!-- 1st box ends here -->
                 {%endfor%}
-                    
+<script>
+    //Timer
+    let countdown = '{{ time }}'; //in seconds
+    console.log('{{ time }}');
+    const timerBlock = document.querySelector('#timer');
+    const x = setInterval(() => {
+        countdown = countdown - 1;
+        let hours = Math.floor(countdown / 3600);
+        let minutes = Math.floor((countdown % 3600) / 60);
+        let seconds = Math.floor((countdown % 3600) % 60);
+        if (countdown < 0) {
+            timerBlock.innerHTML = 'Expired';
+            clearInterval(x);
+        }
+        if (hours < 10) {
+            hours = '0' + hours;
+        }
+        if (minutes < 10) {
+            minutes = '0' + minutes;
+        }
+        if (seconds < 10) {
+            seconds = '0' + seconds;
+        }
+        timerBlock.innerHTML = `${hours}:${minutes}:${seconds}`;
+    }, 1000);
+</script>                    
                     <!-- </div>  -->
                 </div>
                 <!-- this is for space between cards and border like padding-bottom-->
