--- a/clash/static/css/coding.css
+++ b/clash/static/css/coding.css
@@ -157,6 +157,70 @@
 											  transparent 100%,
 											  transparent)
 }
+
+
+#custominput::-webkit-scrollbar-track
+{
+	/* box-shadow: inset 0 0 3px rgba(144,145,148,0.4); */
+    border: 1px solid rgb(144,145,148);
+    border: 1px solid black;
+    /* color:  */
+	/* border-radius: 10px; */
+	background-color: #1f2833;
+    /* color: #1f2833; */
+}
+/* #questionarea::-webkit-scrollbar-track */
+#custominput::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#custominput::-webkit-scrollbar-thumb
+{
+	background-color: #131313;	
+    border-radius: 4px;
+	background-image: -webkit-linear-gradient(45deg,
+	                                          rgba(255, 255, 255, .2) 33%,
+											  transparent 33%,
+											  transparent 66%,
+											  rgba(255, 255, 255, .2) 66%,
+											  rgba(255, 255, 255, .2) 100%,
+											  transparent 100%,
+											  transparent)
+}
+
+
+#output::-webkit-scrollbar-track
+{
+	/* box-shadow: inset 0 0 3px rgba(144,145,148,0.4); */
+    border: 1px solid rgb(144,145,148);
+    border: 1px solid black;
+    /* color:  */
+	/* border-radius: 10px; */
+	background-color: #1f2833;
+    /* color: #1f2833; */
+}
+/* #questionarea::-webkit-scrollbar-track */
+#output::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+#output::-webkit-scrollbar-thumb
+{
+	background-color: #131313;	
+    border-radius: 4px;
+	background-image: -webkit-linear-gradient(45deg,
+	                                          rgba(255, 255, 255, .2) 33%,
+											  transparent 33%,
+											  transparent 66%,
+											  rgba(255, 255, 255, .2) 66%,
+											  rgba(255, 255, 255, .2) 100%,
+											  transparent 100%,
+											  transparent)
+}
 .langchoose{
     padding: 6px 20px 6px 20px;
     border-radius: 4px;
