--- a/clash/templates/mysub.html
+++ b/clash/templates/mysub.html
@@ -155,20 +155,20 @@
                             <div role="tabpanel" class="tab-pane fade" id="prob4">4</div>
                         </div>
                         <div class="scrollable">
-                        <table style="text-align: center;" class="table table-striped rside table-1">
+                        <table style="text-align: center;" class="table table-striped rside table-1" id="table001">
                             <thead>
                                 <tr>
                                     <th class="main-table main-table-1" scope="col">Sr.No</th>
                                     <th class="main-table main-table-1" scope="col">Time</th>
-                                    <th class="main-table main-table-1" scope="col">Accuracy</th>
-                                    <th class="main-table main-table-1" scope="col">Solution</th>
+                                    <th class="main-table main-table-1" scope="col">Score</th>
+                                    <th class="main-table main-table-1" scope="col" id="tablesol">Solution</th>
                                 </tr>
                             </thead>
                             <tbody>
 
                             {% for sub in data %}
                             <tr>
-                                    <th class="main-table main-table-1" scope="row">1</th>
+                                    <th class="main-table main-table-1" scope="row">{{sub}}</th>
                                     <th class="main-table main-table-1" scope="row">{{sub.time}}</th>
                                     <!-- <td class="main-table main-table-1">{{sub.status}}</td>  -->
                                     <td>
@@ -178,14 +178,41 @@
                                                 <h3>{{sub.score}}</h3>
                                         <!-- </div> -->
                                     </td>
+                                    <td style="display:none"><textarea>{{sub.code}}</textarea></td>
                                     <td class="main-table main-table-1"> <button type="button" href="#"
                                             style="background-color: #293b5f; color: white; margin-left: 20px;"
                                             class="btn">View</button>
+                                    </td>
+                                    <td>
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="btn btn-primary button1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                                            Launch demo modal
+                                        </button>
+                                        
+                                        
                                     </td>
                                 </tr>
                         {% endfor %}                                   
                             </tbody>
                         </table></div>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                            ...
+                            </div>
+                            <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                        </div>
                     </div>
                     <div class="rside-full col-11 col-lg-4">
                         <div class="row">
@@ -315,5 +342,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script>
+        let t=document.getElementById("table001");
+        console.log(t);
+        document.querySelector('#tablesol').addEventListener('click', function (item) {
+                console.log('hello');
+                
+            })
+    </script>
 
 </html>
