--- a/sandbox/templates/submission.html
+++ b/sandbox/templates/submission.html
@@ -199,7 +199,10 @@
             <div class="card-body">
               <h5 class="glow">
                 Test {{forloop.counter}}
-                <i class="fa fa-close" style="font-size: 40px; color: red">{{test}}</i>
+
+                
+                <i class="fa fa-close" style="font-size: 40px; color: red"></i>
+                <h1>{{test}}</h1>
               </h5>
             </div>
           </div>
