--- a/clash/templates/leaderboard.html
+++ b/clash/templates/leaderboard.html
@@ -67,9 +67,15 @@
         <a class="navbar-brand navvi" href="#" style="padding: 0px"
           ><img src="{% static 'img/clashwhite.png' %}" alt="Clash Logo" height="30px"
         /></a>
-        <a class="navbar-brand navvi timer" href="#" style="margin-left: 20px"
-          >TIMER
-        </a>
+        <div class="navbar-brand navvi timer"  style="margin-left: 20px">
+          <div class="timer_container">
+            <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+                <span id="hours" class="timeritems"></span> :
+                <span id="minutes" class="timeritems"></span> :
+                <span id="seconds" class="timeritems"></span>
+            </div>
+          </div> 
+        </div>
 
         <button
           class="navbar-toggler"
@@ -95,6 +101,14 @@
                 style="margin-left: 10px; margin-right: 10px"
                 >Question Hub</a
               >
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link active navvi" aria-current="page" href="../mysubs/{{ques.id}}"
+                  style="margin-left: 10px;margin-right: 10px;">Submissions</a> <!-- correct -->
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navvi" aria-current="page" href="{%url 'clash-home'%}"
+                  style="margin-left: 10px;margin-right: 10px;">Instructions</a>
             </li>
             <!-- <li class="nav-item">
               <a
@@ -231,8 +245,9 @@
 				<td>{{result.total_score}}</td>
 			  </tr>
 			{% endfor %}   -->
+      <!-- {{ forloop.counter|add:"2" }} -->
 			{% for item in items %}
-        <td>{{ loop.index }}</td>
+        <td>{{forloop.counter0|add:items.start_index}}</td>
 				<td>{{item.user.username}}</td>
 				<td>{{item.ques1}}</td>
 				<td>{{item.ques2}}</td>
@@ -257,9 +272,11 @@
                 <li class="page-item">
                   <a class="page-link" href="?page=1">1</a>
                 </li>
+                {% if items.has_next %}
                 <li class="page-item">
                   <a class="page-link" href="?page=2">2</a>
                 </li>
+                {% endif %}
                 {% if items.has_next %}                
                 <li class="page-item">
                   <a class="page-link" href="{%url 'clash-leaderboard' %}?page={{items.next_page_number}}">Next</a>
@@ -295,4 +312,39 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+
+  <script>
+    //Timer
+    (function () {
+    const second = 1000,
+          minute = second * 60,
+          hour = minute * 60,
+          day = hour * 24;
+  
+ 
+    
+    const countDown = new Date('{{time}}').getTime(),
+        x = setInterval(function() {    
+  
+          const now = new Date().getTime(),
+                distance = countDown - now;
+  
+        //   document.getElementById("days").innerText = Math.floor(distance / (day)),
+            document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+            document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+            document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+  
+          //do something later when date is reached
+          if (distance < 0) {
+            document.getElementById("headline").innerText = "";
+            document.getElementById("countdown").style.display = "";
+            document.getElementById("content").style.display = "";
+            clearInterval(x);
+            location.href="{%url 'logout'%}";
+          }
+          //seconds
+        }, 0)
+    }());
+</script>
+
 </html>
