--- a/clash/templates/mysub.html
+++ b/clash/templates/mysub.html
@@ -53,15 +53,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
-
+    
 <body>
+    <h1 style="display:none" id="qno">{{pk}}</h1>
     <div class="">
         <!-- Navbar goes here -->
         <nav class="navbar navbar-expand-lg navbarr">
             <div class="container-fluid">
                 <a class="navbar-brand navvi" href="#" style="padding: 0px;"><img src="{% static 'img/clashwhite.png' %}"
                         alt="Clash Logo" height="30px"></a>
-                <a class="navbar-brand navvi timer" href="#" style="margin-left: 20px;">TIMER </a>
+                <div class="navbar-brand navvi timer" href="#" style="margin-left: 20px;">
+                    <div class="timer_container">
+                        <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+                            <span id="hours" class="timeritems"></span> :
+                            <span id="minutes" class="timeritems"></span> :
+                            <span id="seconds" class="timeritems"></span>
+                        </div>
+                      </div>                     
+                </div>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -112,39 +121,44 @@
                         src="{% static 'img/pisblogo.png' %}" alt="Clash Logo" height="30px"></a>
             </div>
         </nav>
-
+        <textarea style="display:none" id="ac">{{ac}}</textarea>
+        <textarea style="display:none" id="rte">{{rte}}</textarea>
+        <textarea style="display:none" id="wa">{{wa}}</textarea>
+        <textarea style="display:none" id="tle">{{tle}}</textarea>
+        <textarea style="display:none" id="cte">{{cte}}</textarea>
+        <textarea style="display:none" id="mle">{{mle}}</textarea>
         <div class="container-1">
             <div class="grid">
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <ul class="nav-1 nav nav-pills justify-content-between ">
                             <li class="nav-item">
-                                <a class="nav-link active nav-item-1 nav-link-1" aria-current="page" href="./1"
-                                    role="tab" data-toggle="tab">Problem 1</a>
+                                <a class="nav-link   nav-link-1" style="color: white;" aria-current="page" href="./1"
+                                    role="tab" data-toggle="tab" id="qno1">Problem 1</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-1" style="color: white;" href="./2" role="tab"
-                                    data-toggle="tab">Problem
+                                    data-toggle="tab" id="qno2">Problem
                                     2</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-1" style="color: white;" href="./3" role="tab"
-                                    data-toggle="tab">Problem
+                                    data-toggle="tab" id="qno3">Problem
                                     3</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-1" style="color: white;" href="./4" role="tab"
-                                    data-toggle="tab">Problem
+                                    data-toggle="tab" id="qno4">Problem
                                     4</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-1" style="color: white;" href="./5" role="tab"
-                                    data-toggle="tab">Problem
+                                    data-toggle="tab" id="qno5">Problem
                                     5</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-1" style="color: white;" href="./6" role="tab"
-                                    data-toggle="tab">Problem
+                                    data-toggle="tab" id="qno6">Problem
                                     6</a>
                             </li>
                         </ul>
@@ -165,55 +179,55 @@
                                 </tr>
                             </thead>
                             <tbody>
-
+                                <h1 id="laste" style="display:none">{{data|length}}</h1>
                             {% for sub in data %}
                             <tr>
-                                    <th class="main-table main-table-1" scope="row">{{sub}}</th>
+                                    <th class="main-table main-table-1" scope="row">{{forloop.counter}}</th>
                                     <th class="main-table main-table-1" scope="row">{{sub.time}}</th>
                                     <!-- <td class="main-table main-table-1">{{sub.status}}</td>  -->
                                     <td>
                                         <!-- <div class="progress my-progress"> -->
                                             <!-- <div class="progress-bar progress-bar-striped bg-info role=" progressbar"
                                                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: {{ sub.accuracy}}%"></div> -->
-                                                <h3>{{sub.score}}</h3>
+                                                <h3 style="color:white">{{sub.score}}</h3>
                                         <!-- </div> -->
                                     </td>
-                                    <td style="display:none"><textarea>{{sub.code}}</textarea></td>
-                                    <td class="main-table main-table-1"> <button type="button" href="#"
+                                    <td style="display:none"><textarea id="textarea{{forloop.counter}}">{{sub.code}}</textarea></td>
+                                    <!-- <td class="main-table main-table-1"> <button type="button" href="#"
                                             style="background-color: #293b5f; color: white; margin-left: 20px;"
                                             class="btn">View</button>
-                                    </td>
+                                    </td> -->
                                     <td>
                                         <!-- Button trigger modal -->
-                                        <button type="button" class="btn btn-primary button1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
-                                            Launch demo modal
+                                        <button type="button" class="btn btn-primary button1" data-bs-toggle="modal" data-bs-target="#exampleModal{{forloop.counter}}">
+                                            View
                                         </button>
                                         
-                                        
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="exampleModal{{forloop.counter}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">View submission </h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body" style="max-height:300px">
+                                                    <textarea style="min-height:200px;max-height:300px;width:90%;background-color:#212529 ;resize:none;color:white">{{sub.code}}</textarea>
+                                                </div>
+                                                <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary" id="copybtn{{forloop.counter}}">Copy Code</button>
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                         {% endfor %}                                   
                             </tbody>
                         </table></div>
                     </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                            ...
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
+                    
                     <div class="rside-full col-11 col-lg-4">
                         <div class="row">
                             <div style="display: flex;" class="rside goto-prob">
@@ -242,6 +256,17 @@
                                     </div> -->
                                         <canvas id="mycanvas" class="pie-custom">
                                             <script>
+                                                let ac=Number(document.getElementById('ac').value);
+                                                let tle=Number(document.getElementById('tle').value);
+                                                let rte=Number(document.getElementById('rte').value);
+                                                let wa=Number(document.getElementById('wa').value);
+                                                let cte=Number(document.getElementById('cte').value);
+                                                let mle=Number(document.getElementById('mle').value);
+                                                
+                                                console.log(cte);
+                                                console.log(mle);
+                                                // parseInt(ac);
+                                                console.log(typeof(ac));
                                                 $(document).ready(function () {
                                                     var ctx = $("#mycanvas").get(0).getContext("2d");
 
@@ -249,29 +274,42 @@
                                                     //sum of values = 360
                                                     var data = [
                                                         {
-                                                            value: 1,
+                                                            value: ac,
                                                             color: "green",
                                                             highlight: "lightgreen",
                                                             label: "All Clear"
                                                         },
                                                         {
-                                                            value: 2,
+                                                            value: wa,
                                                             color: "red",
                                                             highlight: "maroon",
                                                             label: "Wrong Answer"
                                                         },
                                                         {
-                                                            value: 3,
+                                                            value: tle,
                                                             color: "orange",
                                                             highlight: "yellow",
                                                             label: "Time Limit Exceeded"
                                                         },
                                                         {
-                                                            value: 1,
+                                                            value: rte,
                                                             color: "burlywood",
                                                             highlight: "brown",
                                                             label: "Run Time Error"
-                                                        }
+                                                        },
+                                                        {
+                                                            value: cte,
+                                                            color: "blue",
+                                                            highlight: "aqua",
+                                                            label: "Common Table Expression"
+                                                        },
+                                                        {
+                                                            value: mle,
+                                                            color: "#311b92",
+                                                            highlight: "#7c4dff",
+                                                            label: "Maximum likelihood estimation"
+                                                        },
+                                                        
                                                     ];
 
                                                     //draw
@@ -318,6 +356,24 @@
                                                         <td style="color: white;">RTE</td>
                                                         <td style="color: white;">{{rte}}</td>
                                                     </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <div style="background-color: blue;"
+                                                                class="circle-dot">
+                                                            </div>
+                                                        </td>
+                                                        <td style="color: white;">CTE</td>
+                                                        <td style="color: white;">{{cte}}</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <div style="background-color: #311b92;"
+                                                                class="circle-dot">
+                                                            </div>
+                                                        </td>
+                                                        <td style="color: white;">MLE</td>
+                                                        <td style="color: white;">{{mle}}</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -343,12 +399,58 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
     <script>
-        let t=document.getElementById("table001");
-        console.log(t);
-        document.querySelector('#tablesol').addEventListener('click', function (item) {
-                console.log('hello');
-                
-            })
+        document.onload=f1();
+        function f1(){
+        let a=Number(document.getElementById('laste').innerHTML);
+        // console.log(typeof a);
+        
+        for(let i=1;i<=a;i++){
+            (document.querySelector(`#copybtn${i}`)).addEventListener('click', function() {
+            let ctxt=document.getElementById(`textarea${i}`).value;
+            
+            // console.log(ctxt);
+            
+            navigator.clipboard.writeText(ctxt);
+            });
+        }
+        
+        
+        let qs=document.getElementById('qno').innerHTML;
+        console.log(qs);
+        document.getElementById(`qno${qs}`).classList.add("nav-item-1");
+    }
     </script>
-
+    <script>
+        //Timer
+        (function () {
+        const second = 1000,
+              minute = second * 60,
+              hour = minute * 60,
+              day = hour * 24;
+      
+     
+        
+        const countDown = new Date('{{time}}').getTime(),
+            x = setInterval(function() {    
+      
+              const now = new Date().getTime(),
+                    distance = countDown - now;
+      
+            //   document.getElementById("days").innerText = Math.floor(distance / (day)),
+                document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+                document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+                document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+      
+              //do something later when date is reached
+              if (distance < 0) {
+                document.getElementById("headline").innerText = "";
+                document.getElementById("countdown").style.display = "";
+                document.getElementById("content").style.display = "";
+                clearInterval(x);
+                location.href="{%url 'logout'%}";
+              }
+              //seconds
+            }, 0)
+        }());
+    </script> 
 </html>
