--- a/clash/templates/question.html
+++ b/clash/templates/question.html
@@ -47,7 +47,7 @@
   <!-- <link rel="stylesheet" href="{% static '/css/coding_color.css' %}"> -->
   <link rel="stylesheet" href="{% static 'css/coding.css' %}">
   <link rel="stylesheet" href="{% static 'css/coding_color.css' %}">
-
+  
 
 </head>
 
@@ -57,7 +57,15 @@
     <div class="container-fluid">
       <a class="navbar-brand navvi" href="#" style="padding: 0px;"><img src="{% static 'img/clashwhite.png' %}" alt="Clash Logo"
           height="30px"></a>
-      <a class="navbar-brand navvi timer" href="#" id="timer" style="margin-left: 20px;">TIMER </a>
+      <div class="navbar-brand navvi timer" href="#" id="timer" style="margin-left: 20px;">
+        <div class="timer_container">
+          <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+              <span id="hours" class="timeritems"></span> :
+              <span id="minutes" class="timeritems"></span> :
+              <span id="seconds" class="timeritems"></span>
+          </div>
+        </div>         
+      </div>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,11 +80,16 @@
           <li class="nav-item ">
             <a class="nav-link active navvi" aria-current="page" href="../mysubs/{{ques.id}}"
                 style="margin-left: 10px;margin-right: 10px;">Submissions</a> <!-- correct -->
-        </li>
+          </li>
           <li class="nav-item">
             <a class="nav-link navvi" aria-current="page" href="{%url 'clash-leaderboard'%}"
               style="margin-left: 10px;margin-right: 10px;">Leaderboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link navvi" aria-current="page" href="{%url 'clash-home'%}"
+                style="margin-left: 10px;margin-right: 10px;">Instructions</a>
+          </li>          
+
           <li class="nav-item ">
             <a class="nav-link navvi" style="margin-left: 10px;margin-right: 10px;cursor:pointer;" data-bs-toggle="modal" data-bs-target="#LogoutModal">Logout</a>
 
@@ -260,6 +273,7 @@
   <script src="{% static 'ace-builds-master/src-noconflict/ext-language_tools.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/coding_editor.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/coding_script.js' %}"></script>
+  <script src="{% static 'js/src-navbar.js' %}" type="text/javascript" ></script>
   
   <!-- jquery -->
   <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
@@ -286,7 +300,7 @@
         url : "{%url 'clash-sub' ques.id%}",
         data: formdata,
         success: function(response,res1){
-          console.log("bkc");
+          // console.log("bkc");
           
           // console.log(response.opt);
           // console.log(res1);
@@ -296,9 +310,47 @@
       })
 
     })
+    $('.loadbuffer').click(function(e){
 
+      // ecxvalues();
+      e.preventDefault();
+      // console.log($('#textformat').val());
+      $.ajax({
+        type : 'GET',
+        url : "{%url 'buffer' ques.id%}",
+        data: "",
+        success: function(response,res1){
+          // console.log("bkc");
+          if(response.lang ==="py"){
+            const $select = document.querySelector('#textformat');
+            $select.value = 'py';
+            document.getElementById("w3revi").textContent=response.key;
+            editor.setValue(response.key);
+
+          }
+          else if(response.lang ==="c"){
+            const $select = document.querySelector('#textformat');
+            $select.value = 'c';
+            document.getElementById("w3revi").textContent=response.key;
+            editor.setValue(response.key);
+          }
+          else if(response.lang ==="cpp"){
+            const $select = document.querySelector('#textformat');
+            $select.value = 'cpp';
+            document.getElementById("w3revi").textContent=response.key;
+            editor.setValue(response.key);
+          }
+          console.log(response.key);
+          console.log(response.lang);
+          // console.log(res1);
+          // console.log(res2);
+          // $("#output").val(response.opt);
+        }
+      })
+
+    })
     $( document ).ready(function() {
-    console.log( "ready!" );
+    // console.log( "ready!" );
     let aq=document.querySelector("#aques").textContent;
 
     var qids=["#qbt1","#qbt2","#qbt3","#qbt4","#qbt5","#qbt6"];
@@ -327,10 +379,10 @@
       localStorage.setItem(`cppc${aq-1}`, document.getElementById("w3revi").textContent);
     }
     console.log('hello');
-    setTimeout(scode, 500);
-    console.log(localStorage.getItem(`pyc${aq-1}`));
-    console.log(localStorage.getItem(`cc${aq-1}`));
-    console.log(localStorage.getItem(`cppc${aq-1}`));
+    setTimeout(scode, 5000);
+    // console.log(localStorage.getItem(`pyc${aq-1}`));
+    // console.log(localStorage.getItem(`cc${aq-1}`));
+    // console.log(localStorage.getItem(`cppc${aq-1}`));
     
     }
     scode();
@@ -355,33 +407,39 @@
 
   </script>
 
-  <script>
-    //Timer
-    let countdown = '{{ time }}'; //in seconds
-    console.log('{{ time }}');
-    const timerBlock = document.querySelector('#timer');
-    const x = setInterval(() => {
-        countdown = countdown - 1;
-        let hours = Math.floor(countdown / 3600);
-        let minutes = Math.floor((countdown % 3600) / 60);
-        let seconds = Math.floor((countdown % 3600) % 60);
-        if (countdown < 0) {
-            timerBlock.innerHTML = 'Expired';
-            clearInterval(x);
-        }
-        if (hours < 10) {
-            hours = '0' + hours;
-        }
-        if (minutes < 10) {
-            minutes = '0' + minutes;
-        }
-        if (seconds < 10) {
-            seconds = '0' + seconds;
-        }
-        timerBlock.innerHTML = `${hours}:${minutes}:${seconds}`;
-    }, 1000);
-</script>
+<script>
+  //Timer
+  (function () {
+  const second = 1000,
+        minute = second * 60,
+        hour = minute * 60,
+        day = hour * 24;
 
+
+  
+  const countDown = new Date('{{time}}').getTime(),
+      x = setInterval(function() {    
+
+        const now = new Date().getTime(),
+              distance = countDown - now;
+
+      //   document.getElementById("days").innerText = Math.floor(distance / (day)),
+          document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+          document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+          document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+
+        //do something later when date is reached
+        if (distance < 0) {
+          document.getElementById("headline").innerText = "";
+          document.getElementById("countdown").style.display = "";
+          document.getElementById("content").style.display = "";
+          clearInterval(x);
+          location.href="{%url 'logout'%}";
+        }
+        //seconds
+      }, 0)
+  }());
+</script>
 
   <script src="https://kit.fontawesome.com/84ff0cdea4.js" crossorigin="anonymous"></script>
   <!-- Footer goes here -->
