--- a/sandbox/static/css/coding.css
+++ b/sandbox/static/css/coding.css
@@ -295,7 +295,10 @@
 
 .footerr{
     clear: both;
-    position:relative;
+    position:absolute;
+    bottom:0;
+    width:100%;
+     height:60px
 }
 @media (max-width:576px){
     .cio{
