--- a/clash/templates/login.html
+++ b/clash/templates/login.html
@@ -64,6 +64,9 @@
                 Login
             </button>
         </form>
+        <!-- <div class="alert alert-danger" role="alert">
+            Invalid credentials!
+        </div> -->
     </div>
     <div class="clear"></div>
     <footer class="text-center fixed-bottom footerr">
