--- a/sandbox/templates/base.html
+++ b/sandbox/templates/base.html
@@ -31,7 +31,7 @@
         /></a>
         <div class="navbar-brand navvi timer" href="#" style="margin-left: 20px">
           <div class="timer_container">
-            <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+            <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown"> 
                 <span id="hours" class="timeritems"></span> :
                 <span id="minutes" class="timeritems"></span> :
                 <span id="seconds" class="timeritems"></span>
