--- a/clash/templates/leaderboard.html
+++ b/clash/templates/leaderboard.html
@@ -69,7 +69,7 @@
         /></a>
         <div class="navbar-brand navvi timer"  style="margin-left: 20px">
           <div class="timer_container">
-            <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+            <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown"> 
                 <span id="hours" class="timeritems"></span> :
                 <span id="minutes" class="timeritems"></span> :
                 <span id="seconds" class="timeritems"></span>
@@ -103,7 +103,7 @@
               >
             </li>
             <li class="nav-item ">
-              <a class="nav-link active navvi" aria-current="page" href="../mysubs/{{ques.id}}"
+              <a class="nav-link active navvi" aria-current="page" href="{%url 'clash-mysub' 1%}"
                   style="margin-left: 10px;margin-right: 10px;">Submissions</a> <!-- correct -->
             </li>
             <li class="nav-item">
