--- a/clash/templates/trial1.html
+++ b/clash/templates/trial1.html
@@ -34,7 +34,7 @@
                     height="30px"></a>
             <div class="navbar-brand navvi" href="#" id="timer2" style="margin-left: 20px;">
                 <div class="timer_container">
-                    <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown">TIMER: 
+                    <div class=" w-100 d-flex p-0 flex-grow-1" id="countdown"> 
                         <span id="hours" class="timeritems"></span> :
                         <span id="minutes" class="timeritems"></span> :
                         <span id="seconds" class="timeritems"></span>
@@ -125,7 +125,8 @@
                                                 <div class="progress-bar progress-bar-striped progress-bar-animated"
                                                     role="progressbar" aria-valuenow="75" aria-valuemin="0"
                                                     aria-valuemax="100" style="width: {{result.accuracy}}%;"
-                                                    style="font-weight: lighter !important;">{{result.accuracy}}</div>
+                                                    style="font-weight: lighter !important;">{{result.accuracy}}
+                                                </div>
                                             </div>
                                         </span>
                                     </div>
