--- a/CREDENZ-02-02-22-Alpha/clash/templates/leaderboard.html
+++ b/CREDENZ-02-02-22-Alpha/clash/templates/leaderboard.html
@@ -294,7 +294,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     var dat=`{{data}}`;
-    console.log(dat);
+    // console.log(dat);
   
     
   </script>
