--- a/CREDENZ-02-02-22-Alpha/clash/templates/question.html
+++ b/CREDENZ-02-02-22-Alpha/clash/templates/question.html
@@ -1,35 +1,3 @@
-<!-- {% block body %}
-<h1>{{ques.id}}) {{ques.title}}</h1>
-<br>
-{{ques.body}}
-
-<h2>Please enter your code here: </h2>
-<form action="{%url 'clash-sub' ques.id%}" method='post'>
-  {%csrf_token%}
-  <textarea id="w3revi" name="input" rows="4" cols="50">{{code}}</textarea>
-  <br>
-  <select name="language" id="textformat">
-    <option value="py"> Python</option>
-    <option value="cpp"> C++</option>
-    <option value="c"> C </option>
-  </select>
-  <br>
-  <button type="submit">Submit</button>
-  <h2>Custom </h2>
-  <textarea id="w3rev" name="custom_input" rows="4" cols="50">{{input}}</textarea>
-  <br>
-  {{error}}<br>
-  <textarea id="w3ev" name="display" rows="4" cols="50">{{output}}</textarea>
-  <br>
-  <button value="Go" name="cust" type="submit">Submit</button>
-</form>
-<form action="{%url 'clash-mysub' ques.id%}" method='post'>
-  {%csrf_token%}
-  <br><br>
-  <button type="submit">My Submissions</button>
-</form>
-  {%endblock%} -->
-
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
@@ -49,8 +17,6 @@ rel="stylesheet"
   <!-- <link rel="stylesheet" href="{% static '/css/coding_color.css' %}"> -->
   <link rel="stylesheet" href="{% static 'css/coding.css' %}">
   <link rel="stylesheet" href="{% static 'css/coding_color.css' %}">
-  
-
 </head>
 
 <body>
@@ -208,7 +174,6 @@ rel="stylesheet"
       <div style=" display: block;" class="codeeditdiv" media="screen"><div id="editor" media="screen"></div></div>
       <div class="rcontd">
         <div>
-          <!-- onclick="cleareditor() , fn1()" -->
           <input type="reset" value="Clear" class="rbtnd" onclick="cleareditor()">
         </div>
         <div>
@@ -294,7 +259,7 @@ rel="stylesheet"
       // console.log($('#textformat').val());
       
       var formdata=$('#qpgform').serialize();
-      console.log(formdata);
+      // console.log(formdata);
       
       $.ajax({
         type : 'POST',
@@ -341,8 +306,8 @@ rel="stylesheet"
             document.getElementById("w3revi").textContent=response.key;
             editor.setValue(response.key);
           }
-          console.log(response.key);
-          console.log(response.lang);
+          // console.log(response.key);
+          // console.log(response.lang);
           // console.log(res1);
           // console.log(res2);
           // $("#output").val(response.opt);
@@ -355,7 +320,7 @@ rel="stylesheet"
     let aq=document.querySelector("#aques").textContent;
 
     var qids=["#qbt1","#qbt2","#qbt3","#qbt4","#qbt5","#qbt6"];
-    console.log(qids[aq]);
+    // console.log(qids[aq]);
 
     document.querySelector(qids[aq-1]).classList.add('activeques');
     
@@ -379,7 +344,7 @@ rel="stylesheet"
     else{
       localStorage.setItem(`cppc${aq-1}`, document.getElementById("w3revi").textContent);
     }
-    console.log('hello');
+    // console.log('hello');
     setTimeout(scode, 5000);
     // console.log(localStorage.getItem(`pyc${aq-1}`));
     // console.log(localStorage.getItem(`cc${aq-1}`));
@@ -415,9 +380,6 @@ rel="stylesheet"
         minute = second * 60,
         hour = minute * 60,
         day = hour * 24;
-
-
-  
   const countDown = new Date('{{time}}').getTime(),
       x = setInterval(function() {    
 
@@ -441,7 +403,6 @@ rel="stylesheet"
       }, 0)
   }());
 </script>
-
   <script src="https://kit.fontawesome.com/84ff0cdea4.js" crossorigin="anonymous"></script>
   <!-- Footer goes here -->
   <footer class="text-center fixed-bottom footerr">
@@ -449,8 +410,5 @@ rel="stylesheet"
       <div class="footer-text pt-3 pb-3">PISB <span>&copy</span></div>
     </div>
   </footer>
-
 </body>
-
-
 </html>
