--- a/clash/templates/waiting.html
+++ b/clash/templates/waiting.html
@@ -128,7 +128,7 @@ align-items: center;justify-content: center;">
           //do something later when date is reached
            if (distance < 0) {
             // console.log("hello");
-            document.getElementById("days").innerText = 0,
+            //document.getElementById("days").innerText = 0,
             document.getElementById("hours").innerText = 0,
             document.getElementById("minutes").innerText = 0,
             document.getElementById("seconds").innerText = 0;
